color add to btn

--- a/calci.html
+++ b/calci.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="calci.css">
 </head>
 <body>
+    <h1> WELCOME TO CALCULATOR </h1>
     <div class="container">
         <div class="display">
             <input id="screen" type="text" placeholder="0">
